<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">HaiLiao</string>

    <string name="welcome_to_use">欢迎使用</string>
    <string name="account_number">账户</string>
    <string name="phone_mailbox_editText">手机号码</string>
    <string name="password">密码</string>
    <string name="sign_in_password_editText">登录密码</string>
    <string name="register">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="sign_in">登录</string>
    <string name="dialogue">对话</string>
    <string name="mail_list">通讯录</string>
    <string name="game">游戏</string>
    <string name="my">我的</string>
    <string name="hai_liao_number">嗨聊号：</string>
    <string name="small_change">零钱</string>
    <string name="payment_password">支付密码</string>
    <string name="modify_payment_password">修改支付密码</string>
    <string name="login_password">登陆密码</string>
    <string name="modify_login_password">修改登陆密码</string>
    <string name="forget_login_password">忘记登陆密码</string>
    <string name="promotional_posters">推广海报</string>
    <string name="promotional_benefits">推广收益</string>
    <string name="my_team">我的团队</string>
    <string name="settings">设置</string>
    <string name="head_img">头像</string>
    <string name="account_number_s">账号</string>
    <string name="nick_name">昵称</string>
    <string name="real_name">真实姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="personal_center">个人资料</string>
    <string name="modify_head_img">修改头像</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="determine">确定</string>
    <string name="cancel">取消</string>
    <string name="my_small_change">我的零钱</string>
    <string name="cny">¥</string>
    <string name="cny_ch">元</string>
    <string name="recharge">充值</string>
    <string name="cash_withdrawal">提现</string>
    <string name="recharge_record">充值记录</string>
    <string name="transfer_accounts_record">转账记录</string>
    <string name="cash_withdrawal_record">提现记录</string>
    <string name="red_envelopes_record">红包记录</string>
    <string name="original_password">原\u3000密\u3000\码：</string>
    <string name="new_password">新\u3000密\u3000码：</string>
    <string name="new_password_determine">确认新密码：</string>
    <string name="phone_number_s">手&amp;#160160机号码：</string>
    <string name="verification_code">验\u3000证\u3000码：</string>
    <string name="get_code">获取验证码</string>
    <string name="group_chat">群聊号：</string>
    <string name="search">搜索</string>
    <string name="immediate_recharge">立即充值</string>
    <string name="voucher_center">充值中心</string>
    <string name="line_recharge">线下充值</string>
    <string name="recharge_money">充值金额：</string>
    <string name="bank_card_number">银行卡号：</string>
    <string name="real_name_s">真实姓名：</string>
    <string name="opening_bank">开户银行：</string>
    <string name="phone_number_ss">手机号码：</string>
    <string name="save_information">保存信息</string>
    <string name="modify_information">修改信息</string>
    <string name="exchange_amount">兑换数额：</string>
    <string name="confirmation_withdrawal">确认提现</string>
    <string name="available_balance">可用余额</string>
    <string name="bank_card_withdrawal">银行卡提现</string>
    <string name="cash_withdrawal_money">提现金额：</string>
    <string name="recharge_time">充值时间：</string>
    <string name="recharge_mode">充值方式：</string>
    <string name="recharge_type">充值状态：</string>
    <string name="remarks">备\u3000\u3000注：</string>
    <string name="recharge_record_details">充值记录详情</string>
    <string name="transfer_accounts_record_details">转账记录详情</string>
    <string name="transfer_accounts_number">转账金额：</string>
    <string name="transfer_accounts_number_s">转账金额</string>
    <string name="transfer_accounts_time">转账时间：</string>
    <string name="transfer_accounts_id">转账账号：</string>
    <string name="transfer_accounts_type">转账状态：</string>
    <string name="red_envelopes_type">红包金额：</string>
    <string name="number_money">金额：</string>
    <string name="number_money_s">金\u3000\u3000额：</string>
    <string name="number_money_id">账\u3000\u3000号：</string>
    <string name="zhuanzhang">转账</string>
    <string name="zhuanzhang_text">添加转账说明</string>
    <string name="red_envelopes">红包</string>
    <string name="current_balance">当前余额：</string>
    <string name="view_rules">查看规则</string>
    <string name="red_envelopes_number">红包个数</string>
    <string name="seven_individual">7个</string>
    <string name="nine_individual">9个</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="total_amount">总金额</string>
    <string name="choose_ray_number">选择雷号</string>
    <string name="stuffed_red_envelopes">塞入红包</string>
    <string name="receive_red_envelopes">领取红包</string>
    <string name="get_into_room">进入房间</string>
    <string name="open">開</string>
    <string name="red_envelope_record">红包记录</string>
    <string name="common">共</string>
    <string name="leihao">雷号：</string>
    <string name="best_luck">手气最佳</string>
    <string name="successful_transfer">转账成功</string>
    <string name="individual">个</string>
    <string name="spell">拼</string>
    <string name="member_list">成员列表</string>
    <string name="group_chat_name">群聊名称</string>
    <string name="group_chat_number">群聊号码</string>
    <string name="customer_service">客服</string>


    <string name="prompt">提示：</string>
    <string name="prompt1">再按一次退出程序！</string>
    <string name="prompt2">加载中...</string>
    <string name="prompt3">手机号不能为空</string>
    <string name="prompt4">密码不能为空</string>
    <string name="prompt5">网络错误!</string>
    <string name="prompt6">手机号不能为空！</string>
    <string name="prompt7">密码不能为空！</string>
    <string name="prompt8">操作成功</string>
    <string name="prompt9">请输入昵称！</string>
    <string name="prompt10">请输入原密码</string>
    <string name="prompt11">请输入新密码</string>
    <string name="prompt12">请输入确认新密码</string>
    <string name="prompt13">请输入6位数密码</string>
    <string name="prompt14">两次输入的密码不一致！</string>
    <string name="prompt15">请输入手机号</string>
    <string name="prompt16">请输入验证码</string>
    <string name="prompt17">请输入正确手机号</string>
    <string name="prompt18">请6位数验证码</string>
    <string name="prompt19">验证码已发送</string>
    <string name="prompt20">秒后重试</string>
    <string name="prompt21">暂无好友</string>
    <string name="prompt22">请输入手机号或用户ID</string>
    <string name="prompt23">充值到账会有延迟，请稍后查询。</string>
    <string name="prompt24">请输入正确的卡号</string>
    <string name="prompt25">请输入开户人姓名</string>
    <string name="prompt26">请输入开户银行</string>
    <string name="prompt27">请输入符合要求的数额</string>
    <string name="prompt28">请先保存银行卡信息</string>
    <string name="prompt29">，最低100起提且为100的倍数</string>
    <string name="prompt30">提现时间每日：9:30-19:00</string>
    <string name="prompt31">暂无记录</string>
    <string name="prompt32">请输入转账金额</string>
    <string name="prompt33">请输入转账说明</string>
    <string name="prompt34">红包发布范围：30-800元</string>
    <string name="prompt35">未领取的红包将于三分钟后退款</string>
    <string name="prompt36">最多选择六个雷号</string>
    <string name="prompt37">请输入红包个数</string>
    <string name="prompt38">手慢了，红包已抢完</string>
    <string name="prompt39">查看大家手气</string>
    <string name="prompt40">的红包</string>
    <string name="prompt41">恭喜发财，大吉大利</string>
    <string name="prompt42">红包已过期</string>
    <string name="prompt43">红包已抢完</string>
    <string name="prompt44">红包已抢过</string>
    <string name="prompt45">个包</string>
    <string name="prompt46">暂无记录</string>
    <string name="prompt47">抢了</string>
    <string name="prompt48">元，中雷赔付：</string>
    <string name="prompt49">嗨聊转账</string>
    <string name="prompt50">福利红包</string>
    <string name="prompt51">只显示最近24小时的记录</string>
    <string name="prompt52">抢到的红包</string>
    <string name="prompt53">发出的红包</string>
    <string name="prompt54">最多显示50个在线用户</string>
    <string name="prompt55">自动清除一小时以前的记录</string>

</resources>
