<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".mvp.ui.activity.CashWithdrawalActivity">

    <!--  提现——XML  -->

    <include
        layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_card_number"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_14" />

                <!--   银行卡号   -->
                <EditText
                    android:id="@+id/bank_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_toLeftOf="@+id/phone_img"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:gravity="center|left"
                    android:hint="@string/prompt24"
                    android:inputType="numberDecimal"
                    android:paddingRight="@dimen/dp_10"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/colorText_1A1A1A"
                    android:textColorHint="@color/colorTextHint"
                    android:textCursorDrawable="@drawable/test_cursor"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/real_name_s"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_14" />

                <!--   真实姓名   -->
                <EditText
                    android:id="@+id/real_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_toLeftOf="@+id/phone_img"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:gravity="center|left"
                    android:hint="@string/prompt25"
                    android:paddingRight="@dimen/dp_10"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/colorText_1A1A1A"
                    android:textColorHint="@color/colorTextHint"
                    android:textCursorDrawable="@drawable/test_cursor"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/opening_bank"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_14" />

                <!--   开户银行   -->
                <EditText
                    android:id="@+id/opening_bank"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_toLeftOf="@+id/phone_img"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:gravity="center|left"
                    android:hint="@string/prompt26"
                    android:paddingRight="@dimen/dp_10"
                    android:lines="1"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textColorHint="@color/colorTextHint"
                    android:textCursorDrawable="@drawable/test_cursor"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number_ss"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_14" />

                <!--   手机号码   -->
                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_toLeftOf="@+id/phone_img"
                    android:focusable="false"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:gravity="center|left"
                    android:hint="@string/prompt15"
                    android:inputType="numberDecimal"
                    android:maxLength="11"
                    android:paddingRight="@dimen/dp_10"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/colorText_1A1A1A"
                    android:textColorHint="@color/colorTextHint"
                    android:textCursorDrawable="@drawable/test_cursor"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/colorLine" />

            <!--  保存信息  -->
            <TextView
                android:id="@+id/save_information"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_25"
                android:background="@drawable/backpround_corners5_32cd32"
                android:gravity="center"
                android:text="@string/save_information"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_15"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exchange_amount"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_14" />

                <!--   兑换数额   -->
                <EditText
                    android:id="@+id/exchange_amount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_toLeftOf="@+id/phone_img"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:gravity="center|left"
                    android:hint="@string/prompt27"
                    android:inputType="numberDecimal"
                    android:maxLength="11"
                    android:paddingRight="@dimen/dp_10"
                    android:lines="1"
                    android:text=""
                    android:textColor="@color/colorText_1A1A1A"
                    android:textColorHint="@color/colorTextHint"
                    android:textCursorDrawable="@drawable/test_cursor"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_balance"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_14" />

                <TextView
                    android:id="@+id/available_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_2"
                    android:text="0.00"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt29"
                    android:textColor="@color/colorText_1A1A1A"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_gravity="center"
                android:text="@string/prompt30"
                android:textColor="@color/colorText_1A1A1A"
                android:textSize="@dimen/sp_14" />


            <!--  确认提现  -->
            <TextView
                android:id="@+id/confirmation_withdrawal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_35"
                android:layout_marginLeft="@dimen/dp_25"
                android:layout_marginTop="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_25"
                android:background="@drawable/backpround_corners5_32cd32"
                android:gravity="center"
                android:text="@string/confirmation_withdrawal"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_20" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
