<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".mvp.ui.activity.PaymenyPasswordActivity">

    <!--

    支付密码

    -->

    <include
        layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:text="@string/modify_payment_password"
        android:textColor="@color/colorText_1A1A1A"
        android:textSize="@dimen/sp_16" />

    <!--   原密码   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original_password"
            android:textColor="@color/colorText_1A1A1A"
            android:textSize="@dimen/sp_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45">

            <!--   原密码   -->
            <EditText
                android:id="@+id/original_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_toLeftOf="@+id/password_img_s"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/prompt10"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/colorText_1A1A1A"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@drawable/test_cursor"
                android:textSize="@dimen/sp_16" />

            <!--   密码显示/隐藏   -->
            <ImageView
                android:id="@+id/password_img_1"
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/dp_12"
                android:src="@drawable/password_look_s"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/colorLine" />

    <!--   新密码   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/colorText_1A1A1A"
            android:textSize="@dimen/sp_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45">

            <!--   新密码   -->
            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_toLeftOf="@+id/password_img_s"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/prompt11"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/colorText_1A1A1A"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@drawable/test_cursor"
                android:textSize="@dimen/sp_16" />

            <!--   密码显示/隐藏   -->
            <ImageView
                android:id="@+id/password_img_2"
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/dp_12"
                android:src="@drawable/password_look_s"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/colorLine" />

    <!--   确认密码   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password_determine"
            android:textColor="@color/colorText_1A1A1A"
            android:textSize="@dimen/sp_16" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45">

            <!--   确认密码   -->
            <EditText
                android:id="@+id/new_password_determine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_45"
                android:layout_toLeftOf="@+id/password_img_s"
                android:background="@null"
                android:cursorVisible="true"
                android:hint="@string/prompt12"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:paddingRight="@dimen/dp_10"
                android:textColor="@color/colorText_1A1A1A"
                android:textColorHint="@color/colorTextHint"
                android:textCursorDrawable="@drawable/test_cursor"
                android:textSize="@dimen/sp_16" />

            <!--   密码显示/隐藏   -->
            <ImageView
                android:id="@+id/password_img_3"
                android:layout_width="@dimen/dp_22"
                android:layout_height="@dimen/dp_22"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/dp_12"
                android:src="@drawable/password_look_s"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@color/colorLine" />

    <TextView
        android:id="@+id/determine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/backpround_corners5_4295d5"
        android:gravity="center"
        android:text="@string/determine"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/sp_16" />

</LinearLayout>
