<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".mvp.ui.activity.TransferAccountsActivity">

    <!--  转账——XML  -->

    <include
        layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_15"
        android:background="@drawable/backpround_corners5_while"
        android:orientation="vertical">

        <!--  头像  -->
        <ImageView
            android:id="@+id/head_img"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20" />

        <!--  名字  -->
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_15"
            android:text=""
            android:textColor="@color/colorText_1A1A1A"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:paddingLeft="@dimen/dp_15"
            android:text="@string/transfer_accounts_number_s"
            android:textColor="@color/colorText_1A1A1A"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_35"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cny"
                android:textColor="@color/colorText_1A1A1A"
                android:textSize="@dimen/sp_22" />

            <!--   转账金额   -->
            <EditText
                android:id="@+id/zhuanzhang_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center|left"
                android:layout_marginLeft="@dimen/dp_15"
                android:hint="@string/prompt32"
                android:inputType="numberDecimal"
                android:text=""
                android:textColor="@color/colorText_1A1A1A"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_35"
            android:background="@color/colorLine" />

        <!--   转账说明   -->
        <EditText
            android:id="@+id/zhuanzhang_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:background="@null"
            android:gravity="center|left"
            android:layout_marginLeft="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_35"
            android:hint="@string/zhuanzhang_text"
            android:text=""
            android:textColor="@color/colorText_1A1A1A"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/sp_14" />

        <!--   转账   -->
        <TextView
            android:id="@+id/zhuanzhang"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_45"
            android:text="@string/zhuanzhang"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorText_1A1A1A"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"/>

    </LinearLayout>
</LinearLayout>
